Move padding assignments on m-option-base elements to prevent second-line of content from overlapping

--- a/Survey/source/styles/informal/_a-icon-multistate.scss
+++ b/Survey/source/styles/informal/_a-icon-multistate.scss
@@ -8,6 +8,7 @@
 
 .m-option-base .a-icon-multistate {
     position: absolute;
+    left: 8px;
     z-index: 2;
 }
 
