--- a/Survey/source/styles/informal/_a-label.scss
+++ b/Survey/source/styles/informal/_a-label.scss
@@ -514,7 +514,6 @@ html[dir="rtl"] .o-question-slider-horizontal-control {
     .a-label-option {
         position: relative;
         display: inline-block;
-        padding-left: 38px;
         z-index: 2;
     }
 
@@ -524,7 +523,7 @@ html[dir="rtl"] .o-question-slider-horizontal-control {
         position: relative;
         border: globals.$border-thickness solid globals.$background;
         border-radius: calc(#{globals.$border-radius} + 2px);
-        padding: globals.$default-padding;
+        padding: globals.$default-padding globals.$default-padding globals.$default-padding 46px;
         width: 100%;
         height: 100%;
     }
@@ -542,6 +541,10 @@ html[dir="rtl"] .m-option-base {
     .a-label-option {
         padding-left: 0;
         padding-right: 38px;
+    }
+
+    label {
+        padding: globals.$default-padding 46px globals.$default-padding globals.$default-padding;
     }
 
     label + .a-label-option {
